tests/diag/shell-amp.err
tests/diag/shell-amp.id:2:8: error: '&' is only allowed at the end of a command
  in check-amp (app/ish:1712)
  in resolver (app/ish:1891)
  while resolving 'echo' (tests/diag/shell-amp.id:2:1)
