tests/diag/shell-amp.id
activate std/shell
echo a & echo b
